- position the options window in the top right position on the stopwatch - remove the z-index from it as well, its not needed anymore since the options window now is always on top of its correspondent stopwatch

--- a/css/style.css
+++ b/css/style.css
@@ -187,8 +187,8 @@
 .Options-container
     {
     position : absolute;
-    top: 10px;
-    left: 210px;
+    top: 0;
+    right: 0;
 
     min-width: 200px;
     min-height: 90px;
@@ -197,7 +197,6 @@
 
     padding: 5px;
     border-radius: 5px;
-    z-index: 10;    /* so its always above the rest of the elements */
     }
 
 .Options-close
